# pdf2a5

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
pdf2a5/: core.py  entrypoint.py
src/pdf2a5/: core.py  entrypoint.py
